# iono

./: .gitignore  README.md  pyproject.toml  train_student.py  train_teacher.py
ablation_study/: QUICKSTART.py  README.md  SETUP_COMPLETE.md  __init__.py  ablation_config.py  ablation_models.py  eval_ablation.py  example_ablation.py  requirements_ablation.txt  run_ablation_study.py  train_baseline.py  train_no_fgl.py  train_no_film.py  visualize_ablation.py
data_pipeline/: __init__.py  check_nulls.py  convert_lst_to_csv.py  createhkl.py  createhkl_c1pg.py  download igs.py  download_c1pg.py  download_igs.py  fgl_normalize_transform.py  read_ionex_file.py  show_hkl.py
iono/: config.py  dataloader.py  dataset_fgl.py  model_fgl.py  train_student.py  train_teacher.py  training.py
iono/eval/: __init__.py  inspect_npz.py  predict_student_2025.py
iono/train/: __init__.py  student.py  teacher.py
iono_model/: IRI.py  Klobuchar.py
scripts/: inspect_npz.py  predict_student_2025.py  send_email.py  test.py
